--- a/index.css
+++ b/index.css
@@ -93,7 +93,7 @@
     left: 459px;
     font-size: var(--font-size-77xl);
     line-height: 124.91%;
-    background: linear-gradient(90.69deg, #000, #fff 62.28%, #1a1a1a);
+    background: linear-gradient(91deg, #000 -39.69%, #FFF 66.22%, #1A1A1A 130.35%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     display: inline-block;
@@ -106,7 +106,7 @@
     left: 593px;
     font-size: var(--font-size-77xl);
     line-height: 124.91%;
-    background: linear-gradient(89.68deg, #000, #fff 50%, #999);
+    background: linear-gradient(90deg, #000 -24.28%, #FFF 37.34%, #999 98.97%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     display: inline-block;
