--- a/galactic_conflic.css
+++ b/galactic_conflic.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     line-height: normal;
+    
 }
 
 :root {
@@ -32,6 +33,8 @@ body {
     transform: rotate(8.2deg);
     transform-origin: 0 0;
     opacity: 0.3;
+    
+    
 }
 
 .galactic-conflict1 {
@@ -46,6 +49,8 @@ body {
     -webkit-text-fill-color: transparent;
     display: inline-block;
     width: 585px;
+    
+    
 }
 
 .div1, .div2, .div3 {
@@ -363,5 +368,21 @@ body {
         height: 150px;
         top: auto;
         bottom: 10px;
+    }
+}
+.image-1-1, .image-1-2 {
+    position: absolute;
+    top: 3px;
+    left: 0px;
+    width: 1029px;
+    height: 1130px;
+    object-fit: cover;
+    opacity: 0; /* Start with opacity 0 */
+    animation: fadeIn 2s forwards; /* Apply the fade-in animation */
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 0.5; /* End with opacity 1 */
     }
 }
