--- a/index.css
+++ b/index.css
@@ -237,4 +237,26 @@ a:hover {
 
 
 
+
+/* Медиа-запросы для мобильных устройств */
+@media (max-width: 768px) {
+    body {
+        overflow: auto; /* Включаем прокрутку по обеим осям */
+    }
+
+    .div {
+        width: 1200px; /* Устанавливаем фиксированную ширину, чтобы сохранить десктопный вид */
+        margin: 0 auto; /* Центрируем контент */
+    }
+}
+
+
+
+
+
+
+
+
+
+
   
