--- a/global.css
+++ b/global.css
@@ -2,7 +2,8 @@
 body {
     margin: 0;
     line-height: normal;
-    
+    overflow-x: hidden; /* Отключаем горизонтальную прокрутку */
+    overflow-y: auto; /* Включаем вертикальную прокрутку */
 }
 /*Убрать полосу прокрутки для всей страницы*/
 ::-webkit-scrollbar {
